# ESGI_Projet_Annuel

./: .gitignore  README.md  docker-compose.yml
AnimeApi/: Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml
AnimeApi/queries/: get_anime_query.graphql  get_trending_anime_query.graphql
AnimeApi/src/: Anime.rs  anilistqueries.rs  anime.rs  main.rs
BookAPI/: Dockerfile  docker-compose.yml  pom.xml
Database/: EntityRelationshipModel.bcd  EntityRelationshipModel.mcd  InitUserMedia.sql  MPD.bpd  MPD.mpd  PhysicalDataModel.bpd  PhysicalDataModel.mpd  Workspace PowerAMC.sws  create_database.sql  deployment_diagram.graphml
MobileApp/: .env  README.md  pubspec.yaml
MobileApp/android/app/: build.gradle
MobileApp/ios/Runner/: Info.plist
MobileApp/ios/Runner.xcodeproj/: project.pbxproj
MobileApp/jsonfile/: data.json  movie.json
MobileApp/lib/: data.dart  main.dart
MobileApp/test/: widget_test.dart
MobileApp/web/: index.html
MobileApp/windows/: CMakeLists.txt
MovieAPI/: .gitignore  Dockerfile  MovieAPI.sln  Program.cs  appsettings.json  docker-compose.yml
MovieAPI/Controllers/: MovieController.cs
MovieAPI/Models/: Actor.cs  Genre.cs  Movie.cs
MovieAPI/MovieAPI/: MovieAPI.csproj  Program.cs  appsettings.json
MovieAPI/MovieAPI.Tests/: MovieAPI.Tests.csproj
UserApi/: Dockerfile  docker-compose.yml  pom.xml
UserApi/JavaDoc/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  type-search-index.js
(+153 files in other folders)
