[package]
name = "AnimeApi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
warp = "0.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
reqwest = "0.11.10"
async-trait = "0.1.56"
tokio = "1.19.2"
chrono = "0.4.19"